# picturelm

./: .drone.yml  .gitignore  README.rst  elm-analyse.json  elm.json  index.html  index.js  leaflet.js  package.json  styles.css
picturwasm/: Cargo.toml  index.html  spinner.css  styles.css
picturwasm/src/: main.rs
picturwasm/src/gallery/: gallery.rs  image.rs  mod.rs
scripts/: m1-mac-install.sh
src/: Graphql.elm  Home.elm  Main.elm  Map.elm  Model.elm  Msg.elm  Navigation.elm  Spinner.elm  Update.elm
src/API/Gallery/: Object.elm  Query.elm  Scalar.elm  VerifyScalarCodecs.elm
src/API/Gallery/Object/: GalleryNode.elm  ImageNode.elm  ImageNodeEdge.elm
src/Gallery/: Components.elm  Graphql.elm  Model.elm  Utils.elm  View.elm
tests/: GalleryUtilsTest.elm
